--- a/trunk/valspar/CSS/admin.css
+++ b/trunk/valspar/CSS/admin.css
@@ -20,8 +20,14 @@
 /*
 #LoginForm{position:absolute;}
 */
+#Session{position:absolute; top:20px; left:35px;}
 #LbUser{position:absolute; top:60px; left:35px;}
 #InUser{position:absolute; top:60px; right:35px;}
 #LbPass{position:absolute; top:90px; left:35px;}
 #InPass{position:absolute; top:90px; right:35px;}
 #BtLogin{position:absolute; top:120px; right:40px;}
+
+/*Data Canvas*/
+#Counter{ position:relative; margin-right: auto; margin-left:auto; width: 200px;}
+#SaveToCSV{ position:relative; margin-right: auto; margin-left:auto; left: 15%;}
+#table{ position:relative; margin-right: auto; margin-left:auto;}
