Firefox 3.6 css fixed #2977

--- a/trunk/valspar/CSS/index.css
+++ b/trunk/valspar/CSS/index.css
@@ -13,9 +13,10 @@
 
 .objinside
 {
-	position: absolute;
+	position: absolute; 
 }
 
+ 
 /* Page Background */
 #FongateCanvas
 {
@@ -86,3 +87,7 @@
 {
 	#ImgLink{left: 164px;top: 583px; cursor:pointer;}
 }
+
+foo, x:-moz-any-link, x:default { 
+	
+} 
